# 2025_20675635

./: .gitignore  README.md  adder_8h.html  adder_8h_source.html  git-cheat-sheet.txt  hi_and_date.cmd  index.html
.github/workflows/: deploy-doxygen.yml
Worksheet 3/: hello.cpp
Worksheet5/: adder.h
new folder/: test.cpp
week 3/: calc.cpp
worksheet 3/adder_dynamic/include/: adder.h
worksheet 5/: calc.cpp
worksheet-6/first_QT_project/: CMakeLists.txt  dialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelPartList.h
worksheet-7/Exercise 1/: CMakeLists.txt
worksheet-7/Exercise 2/: CMakeLists.txt  vtkvr.cpp
worksheet-7/Exercise x/: CMakeLists.txt  dialog.cpp  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelPart.cpp  modelPart.h  modelPartList.cpp  modelPartList.h
worksheet-7/vtk_and_qt/vtk_and_qt/: CMakeLists.txt  dialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelPart.cpp  modelPart.h
worksheet4/calc_cmake/: CMakeLists.txt  calc.cpp
worksheet4/hello_cmake/: CMakeLists.txt  hello.cpp
